chore: add aider to gitignore and prod build script

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "package:mac": "npm run build && electron-builder --mac",
     "package:linux": "npm run build && electron-builder --linux --publish never",
     "package:win": "npm run build && electron-builder --win --publish never",
+    "prod": "npm run package:mac && open release/mac-arm64/Emdash.app",
     "postinstall": "electron-rebuild",
     "rebuild": "electron-rebuild -f -v 30.5.1",
     "clean": "rm -rf node_modules dist",
